package com.calmperson.imagefinder

object TestTag {
    const val ABOUT_IMAGE = "about_image"
    const val IMAGE = "image"
    const val DO_SEARCh = "do_search"
    const val ALERT_DIALOG_ITEM = "alert_dialog_item"
}