<resources>
    <string name="app_name">Image Finder</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="about_image">About image</string>
    <string name="internet_connection_issue">Internet connection issue</string>

    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
...
